# codex-notify

./: .env.sample  .gitignore  AGENTS.md  Gemfile  README.md  Rakefile  codex-notify.py  codex-notify.rb  pyproject.toml  session
.codex/: hooks.json.example
.github/: dependabot.yml
.github/workflows/: ci.yml
lib/: codex_notify.rb
lib/codex_notify/: cli.rb  config.rb  config_diagnostics.rb  config_migrator.rb  config_support.rb  destination_name.rb  destination_resolver.rb  durable_slack_publisher.rb  env_source_loader.rb  hook_cli.rb  hook_config.rb  hook_event.rb  hook_formatter.rb  hook_input_validator.rb  hook_runner.rb  hook_store.rb  hook_thread_publisher.rb  log_event_parser.rb  message_formatter.rb  outbox_commands.rb  secret_protection.rb  security.rb  session_log.rb  slack_client.rb  slack_delivery_worker.rb  slack_outbox.rb  (+2 more)
test/: test_cli.rb  test_config.rb  test_config_diagnostics.rb  test_config_migrator.rb  test_destination_resolver.rb  test_env_source_loader.rb  test_helper.rb  test_hook_cli.rb  test_hook_config.rb  test_hook_formatter.rb  test_hook_input_validation.rb  test_hook_payload_compatibility.rb  test_hook_runner_chunking.rb  test_hook_runner_concurrency.rb  test_hook_runner_dependencies.rb  test_hook_store.rb  test_hook_thread_publisher.rb  test_log_event_parser.rb  test_message_formatter.rb  test_outbox_commands.rb  test_secret_protection.rb  test_security.rb  test_session_log.rb  test_slack_client.rb  test_slack_delivery_worker.rb  test_slack_outbox.rb  test_stream_processor.rb  test_trusted_config_loader.rb
tests/: test_cli.py
(+3 files in other folders)
